# whspr-phone

./: .gitattributes  .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  TEST_PLAN.md  THIRD_PARTY_NOTICES.md  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: static-checks.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_whisper.cpp
app/src/main/java/dev/jorgex/whspr/: AppSettings.kt  AudioRecorder.kt  BubbleMicView.kt  KeyboardLayout.kt  KeyboardView.kt  Languages.kt  LocalTranscriber.kt  MainActivity.kt  ModelCatalog.kt  ModelStore.kt  SettingsActivity.kt  Theme.kt  Ui.kt  VoiceWaveView.kt  WhsprInputMethodService.kt  WhsprRecognitionService.kt
app/src/main/res/drawable/: ic_key_backspace.xml  ic_key_enter.xml  ic_key_globe.xml  ic_key_mic.xml  ic_key_shift.xml  ic_key_shift_caps.xml  ic_launcher_foreground.xml  ic_settings.xml  ic_trash.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/xml/: input_method.xml  recognition_service.xml
scripts/: build-debug.ps1  build-release.ps1  check-android-env.ps1  check-static.ps1  install-debug.ps1  install-release.ps1  verify-apk.ps1  verify-device.ps1  verify-model-catalog.ps1  write-local-properties.ps1
